# General_Examples

Python/executable_deployment/pyinstaller/example_libraby_with_binary_deps/: pyproject.toml
Python/executable_deployment/pyinstaller/example_libraby_with_binary_deps/array_sum_example/: array_sum_example.py  sum_array.c  sum_array.h
Python/executable_deployment/pyinstaller/example_libraby_with_binary_deps/array_sum_example/_pyinstaller/: __init__.py  hook-array_sum_example.py
