[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "array_sum_example"
description = "My package description"
version = "11.0.0"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD 3-Clause License"}

dependencies = [
]

[tool.setuptools.package-data]
array_sum_example = ["*.dll"]

[project.entry-points."pyinstaller40"]
hook-dirs = "array_sum_example._pyinstaller:get_hook_dirs"